# New-Atlas

./: .gitignore  CLAUDE.md  README.md  coding_guidelines.md  pyproject.toml
atlas/: __init__.py  paths.py
circuits/: README.md  __init__.py  ablation.py  pipeline.py  probes.py
configs/: default.yaml  module1_config.yaml
docs/: 0904_draft_1_v2.md  5A and 5B coding instructions.md  6_ablation_design.md  Experiment 1 — Relaxed Modularity Scorin.md  NOTEBOOKS.md  PAPER_MAP.md  R1_design.md  archive.md  findings.md  findings_v2.md  module_2_comments.md  notebook_guide.md  writeup_atlas_01.md
experiments/: fig13_python_dendrogram.py  fig1_concept_scatter.py  fig2_concept_fraction_profile.py  fig3_cross_language_sharing.py  fig4_temporal_dynamics.py  fig5_rust_dendrogram.py  fig6_four_cluster_test.py  fig7_probe_accuracy.py  fig8_jaccard_cosine.py  fig_circuit_size_by_flow_type.py
notebooks/: 0_tokeniser_validation.ipynb  10_E8_cross_model.ipynb  10_layer_dynamics.ipynb  11A_object_prompts.ipynb  11B_checker_prompts.ipynb  11_cross_language.ipynb  12_cross_model.ipynb  12_extraction.ipynb  13_universals.ipynb  13_writeup_tables.ipynb  14_comparison.ipynb  15_neuron_list.ipynb  16_writeup_tables.ipynb  1A_object_prompts.ipynb  1B_checker_prompts.ipynb  1_prompt_gen.ipynb  2A_extraction.ipynb  2B_universals.ipynb  2_extraction.ipynb  3A_evaluation.ipynb  3_universals.ipynb  4B_relaxed_modularity.ipynb  4_modularity_scores.ipynb  4_neuron_list.ipynb  5A_token_checker_generation.ipynb  5B_token_independence.ipynb  5_writeup_tables.ipynb  6_ablation.ipynb  6b_ablation_double.ipynb  7_E3_meta_circuits.ipynb  7_E6_layer_dynamics.ipynb  7_E7_cross_language.ipynb  7_meta_circuits.ipynb  8_E4_wellformedness.ipynb  8_E5_composition.ipynb  8_wellformedness.ipynb  9_E8_cross_model.ipynb  9_composition.ipynb  9_results_stage1.ipynb  NOTEBOOKS.md  (+8 more)
project_report/: 1_Intro.md  2_Findings.md  3_Current.md  4_Journal.md  Final_Report_Draft.md
tests/: conftest.py  test_ablation.py  test_module1.py  test_paper_numbers.py  test_probes.py
(+79 files in other folders)
